<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.byoutline.todoekspert.AddTodoActivity">

    <EditText
        android:id="@+id/taskEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/what_needs_to_be_done" />

    <CheckBox
        android:id="@+id/doneCheckBox"
        android:text="@string/done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/taskEditText" />

    <Button
        android:id="@+id/addButton"
        android:text="@string/add_todo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />

</RelativeLayout>
